# Boost_interprocess

./: CMakeLists.txt  README.md
include/: triangles.h
src/: boost_interprocess.cpp  ipc_0.cpp  ipc_1.cpp
